--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "commander": "^14.0.1"
+    "commander": "^14.0.1",
+    "fast-xml-parser": "^5.3.0"
   },
   "type": "module",
   "name": "bc2025-4",
@@ -11,7 +12,7 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "dev": "nodemon main.js --input ';' --host localhost --port 5000",
+    "dev": "nodemon main.js --input titanic.json --host localhost --port 5000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
